<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.tridentfitness.activities.WorkoutStep5Item">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rel_btn">

        <RelativeLayout
            android:id="@+id/rel_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="#37AE90">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"

                android:layout_marginStart="@dimen/_8sdp"
                android:layout_centerVertical="true"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/txt_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/select_workout"
                android:layout_centerVertical="true"
                android:textColor="#ffffff"
                android:fontFamily="@font/ptsanscaptionbold05"
                android:textSize="@dimen/_15sdp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_step"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rel_header"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:background="#fff">

            <TextView
                android:id="@+id/txt_selectexcercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/step5"
                android:fontFamily="@font/ptsansregular01"
                android:textColor="#575757"

                android:textSize="15sp"
                android:textAlignment="textStart" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_above="@+id/rel_list"
            android:layout_height="0.5dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                 android:background="#ADADAD"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rel_step">

            <include
                layout="@layout/customlistview"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70sdp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#fff">


        <Button
            android:id="@+id/btn_addWorkout"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/workout_btn"
            android:fontFamily="@font/ptsanscaptionbold05"
            android:text="@string/add_workout"
            android:textColor="#fff" />


    </RelativeLayout>
</RelativeLayout>