<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_above="@id/rel_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rel_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="#37AE90">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:id="@+id/img_back"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/btn_back" />

            <TextView
                android:id="@+id/txt_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/cusom_workout"
                android:textColor="#ffffff"
                android:textSize="@dimen/_15sdp"
              android:fontFamily="@font/ptsanscaptionbold05"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rel_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rel_header"
            android:background="#fff">

            <TextView
                android:id="@+id/txt_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:textColor="#585858"

                android:fontFamily="@font/ptsansregular01"
                android:text="@string/txt_detail" />

            <TextView
                android:id="@+id/txt_color"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_4sdp"
                android:layout_below="@id/txt_detail"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_7sdp"

                android:background="#37AE90" />

            <ImageView
                android:id="@+id/txt_line"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@+id/txt_color"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="#ADADAD" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:background="@color/white"
            android:layout_below="@id/rel_step">

            <ListView
                android:id="@id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_65sdp"
        android:id="@+id/rel_btn"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#fff">


        <Button
            android:id="@+id/btn_addWorkout"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/workout_btn"
            android:text="@string/add_workout"
            android:fontFamily="@font/ptsanscaptionbold05"
            android:textColor="#fff" />


    </RelativeLayout>
</RelativeLayout>